--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "element-ui": "^2.12.0",
     "mpvue": "^2.0.0",
     "vuex": "^3.0.1"
   },
